--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb://lrtfdeveloper:svOWQp6M3T67ieVy@ac-wze0iwh-shard-00-00.5rgeyjw.mongodb.net:27017,ac-wze0iwh-shard-00-01.5rgeyjw.mongodb.net:27017,ac-wze0iwh-shard-00-02.5rgeyjw.mongodb.net:27017/?ssl=true&replicaSet=atlas-17k308-shard-0&authSource=admin&retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://lrtfdeveloper:<pass>@ac-wze0iwh-shard-00-00.5rgeyjw.mongodb.net:27017,ac-wze0iwh-shard-00-01.5rgeyjw.mongodb.net:27017,ac-wze0iwh-shard-00-02.5rgeyjw.mongodb.net:27017/?ssl=true&replicaSet=atlas-17k308-shard-0&authSource=admin&retryWrites=true&w=majority
 #spring.data.mongodb.uri=mongodb+srv://lrtfdeveloper:svOWQp6M3T67ieVy@apirestwebflux.5rgeyjw.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=apirestwebflux
-#svOWQp6M3T67ieVy
+
